--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CURSO HTML</title>
 </head>
 <body>
-    <h1> Curso de HTML</h1>
+    <h1 class="titulo"> Curso de HTML</h1>
     <p>Bienvenidos</p>
 </body>
 </html>
