--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+    <link rel="stylesheet" href="styles.css">
+       
     <title>CURSO HTML</title>
 </head>
 <body>
