--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <ul>
 <li><a href="index.html">Inicio</a></li>
 <li><a href="about.html">Acerca de </a></li>
-<li><a href="contacto.html">Contacto</a></li>
+<li><a href="contact.html">Contacto</a></li>
 </ul>
 </nav>
 
