--- a/about.html
+++ b/about.html
@@ -84,22 +84,6 @@
 
     <div class="footer">Derechos reservados © 2023 Raquel Medrano</div>
     
-    <script>
-        // Selecciona el menú y el encabezado
-        const menu = document.querySelector("nav");
-        const header = document.querySelector("#mi-encabezado");
-
-        // Obtén la altura del encabezado
-        const headerHeight = header.offsetHeight;
-
-        // Función que cambia el color de fondo del menú cuando se desplaza
-        window.addEventListener("scroll", () => {
-            if (window.scrollY > headerHeight) {
-                menu.style.backgroundColor = "rgb(5,43,150)"; // Cambia el color de fondo a azul
-            } else {
-                menu.style.backgroundColor = "rgba(0, 0, 0, 0)"; // Vuelve al fondo transparente
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
