--- a/about.html
+++ b/about.html
@@ -1,24 +1,24 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- Indica que es un documento HTML, de lo contrario si no lo ponemos, lo interpretaria como codigo antiguo antes de los 90's Quirks mode, aparecerian codigos antiguos -->
 <html lang="es">
 
 <!--invoca al archivo style.css que contiene todas las configuraciones de estilos de la página-->
 <link rel="stylesheet" href="styles.css">
- 
+
 <!--Encabezado, el valor atributo id invoca a una funcion del archivo style.css para dar el formato del menu-->
-<header id="mi-encabezado"></header>
+<header id="mi-encabezado">
+   
+        
+    <title>CURSO HTML</title>
+    <!--Creacion del menú utilizando Nav-->
+    <nav>    
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="about.html">Acerca de </a></li>
+            <li><a href="contact.html">Contacto</a></li>
+        </ul>
+    </nav>
 
-<title>CURSO HTML</title>
- <!--create a navigation bar-->
- <!--Creacion del menú utilizando nav-->
-<nav>    
-<ul>
-<li><a href="index.html">Inicio</a></li>
-<li><a href="about.html">Acerca de </a></li>
-<li><a href="contact.html">Contacto</a></li>
-</ul>
-</nav>
-
-<!--Texto del encabezado-->
+    <!--Texto del encabezado-->
     <h1>Curso de HTML</h1>
     <p>Acerca de</p>
 
@@ -31,7 +31,7 @@
 
         <!--*CONFIGURACION DEL TEXTO EN EL CUERPO. El tamño y tipo de letra estan especificados en el archivo style.css*-->
         <section class="contenido">
-            <h2> Acerca de...
+            <h2> <span style="background-color:rgb(208, 209, 245);" ;>Acerca de...</span>
             <tr><td> <hr>
                 </hr></h2>
                 <p>
@@ -91,11 +91,11 @@
         </section>
     </main>
 
-    <!--Pie de pagina-->
+     <!--Pie de pagina-->
     <!--el atributo Class="footer" invoca a una funcion del archivo style.css para dar el formato del pie de pagina-->
     <div class="footer">Derechos reservados © 2023 Raquel Medrano</div>
     
     <!--Invoca al archivo script.js que contiene la funcion que controla el comportamiento del menu-->
-    <script src="script.js"></script>
+    <script src="script.js"></script>   
 </body>
 </html>
