--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- Indica que es un documento HTML, de lo contrario si no lo ponemos, lo interpretaria como codigo antiguo antes de los 90's Quirks mode, aparecerian codigos antiguos -->
 <html lang="es">
 
 <!--invoca al archivo style.css que contiene todas las configuraciones de estilos de la página-->
@@ -30,9 +30,9 @@
     <main>
         <!--*CONFIGURACION DEL TEXTO EN EL CUERPO. El tamño y tipo de letra estan especificados en el archivo style.css*-->
         <section class="contenido">
-            <h1> Bienvenidos al Curso de HTML
+            <h2> <span style="background-color: rgb(208, 209, 245);" ;>Bienvenidos al Curso de HTML</span></h2>
             <tr><td> <hr>
-                </hr></h1>
+                </hr>
                 <p>
                 En este curso, aprenderás los fundamentos esenciales de HTML, el lenguaje de marcado utilizado
                 para crear páginas web. HTML, que significa HyperText Markup Language, es la base de la web
